# LockMyTag

./: .env.local  .env.prod  .gitignore  Makefile  README.md  docker-compose.yml
.github/workflows/: build.yml  deploy.yml
nginx/: nginx.conf
src/api/: .env.tests  Dockerfile  pyproject.toml
src/api/account/: models.py
src/api/api/: urls.py
src/api/api/account/: serializers.py  urls.py
src/api/api/locations/: serializers.py  views.py
src/api/api/tags/: serializers.py  urls.py  views.py
src/api/locations/: admin.py  models.py
src/api/locations/migrations/: 0001_initial.py
src/api/locks/: models.py
src/api/locks/migrations/: 0001_initial.py
src/api/main/: asgi.py  settings.py  wsgi.py
src/api/tests/api/account/: test_serializers.py
src/api/tests/api/locations/: test_serializers.py  test_views.py
src/api/tests/api/tags/: test_serializers.py
src/api/tests/locations/: test_models.py
src/backoffice/: Dockerfile  pyproject.toml
src/backoffice/account/: admin.py
src/backoffice/account/migrations/: 0001_initial.py  0002_alter_account_options.py
src/backoffice/api/: urls.py
src/backoffice/api/account/: urls.py  views.py
src/backoffice/locations/: admin.py  models.py  validators.py
src/backoffice/locks/: admin.py  managers.py  models.py  utils.py
src/backoffice/main/: asgi.py  settings.py
src/backoffice/notifications/: admin.py  models.py  telegram.py
src/fetcher/: .env.tests  Dockerfile  constants.py  main.py  pyproject.toml
src/fetcher/apple/: account.py
src/frontend/: api.js  constants.js  eslint.config.mjs  index.html  lock.js  login.html  map.js  package-lock.json  package.json  stylelint.config.js  styles.css
terraform/: init.sh  main.tf  terraform.tfvars  variables.tf
(+30 files in other folders)
