[project]
name = "fetcher"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "colorama>=0.4.6",
    "findmy>=0.9.2",
    "requests>=2.32.5",
]

[dependency-groups]
tests = [
    "ruff>=0.12.10",
]

[tool.ruff]
lint.extend-select = ["I"]
